--- a/cice-judge/Cargo.toml
+++ b/cice-judge/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-opencv = "0.91.3"
+opencv = { version = "0.91.3", features = ["clang-runtime"] }
