--- a/cice-driver/Cargo.toml
+++ b/cice-driver/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libvnc = "0.1.2"
+opencv = { version = "0.91.3", features = ["clang-runtime"] }
