--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["cice", "cice-core", "cice-debug", "cice-driver", "cice-controller"]
+members = ["cice", "cice-core", "cice-debug", "cice-driver", "cice-controller", "cice-lang"]
 resolver = "2"
