--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -2,9 +2,9 @@ name: fmt-check
 
 on:
   push:
-    branches: ["master"]
+    branches: ["master", "dev"]
   pull_request:
-    branches: ["master"]
+    branches: ["master", "dev"]
 
 env:
   CARGO_TERM_COLOR: always
