--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ members = [
     "cice-recognizer",
     "cice-controller",
     "cice-lang",
+    # Fuzz test crate
+    "cice-core/fuzz",
 ]
 resolver = "2"
