--- a/.github/workflows/controller.yml
+++ b/.github/workflows/controller.yml
@@ -1,4 +1,4 @@
-name: cice-core
+name: cice-controller
 
 on: ["push", "pull_request"]
 
@@ -9,15 +9,15 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - name: Install Nightly Rust Toolchain
         run: rustup update nightly
       - name: Build
-        run: cargo build -p cice-core --verbose
+        run: cargo build -p cice-controller --verbose
       - name: Clippy
-        run: cargo clippy -p cice-core --verbose
+        run: cargo clippy -p cice-controller --verbose
       - name: Run tests
-        run: cargo test -p cice-core  --verbose
+        run: cargo test -p cice-controller  --verbose
