--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -1,10 +1,6 @@
 name: fmt-check
 
-on:
-  push:
-    branches: ["master", "dev"]
-  pull_request:
-    branches: ["master", "dev"]
+on: ["push", "pull_request"]
 
 env:
   CARGO_TERM_COLOR: always
