--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,3 @@
 [workspace]
-members = [
-    "cice",
-    "cice-core",
-    "cice-debug",
-    "cice-recognizer",
-    "cice-controller",
-    "cice-lang",
-]
+members = ["crates/*"]
 resolver = "2"
