--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -4,4 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-euclid = { version = "0.22.11", default-features = false, features = ["libm"] }
+euclid = { version = "0.22.11" }
+log = "0.4.22"
+prost = { version = "0.13.3" }
+# Only necessary if using Protobuf well-known types:
+prost-types = { version = "0.13.3" }
+serde = "1.0.214"
+serde_derive = "1.0.214"
+serde_json = "1.0.132"
+
+[build-dependencies]
+prost-build = "0.13.3"
