--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -7,10 +7,7 @@ edition = "2021"
 euclid = { version = "0.22.11" }
 log = "0.4.22"
 prost = { version = "0.13.3" }
-# Only necessary if using Protobuf well-known types:
-prost-types = { version = "0.13.3" }
-serde = "1.0.214"
-serde_derive = "1.0.214"
+serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 
 [build-dependencies]
