--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -10,5 +10,8 @@ prost = { version = "0.13.3" }
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 
+[dev-dependencies]
+tokio = { version = "1.41.1", features = ["rt", "macros"] }
+
 [build-dependencies]
 prost-build = "0.13.3"
