--- a/crates/cice-controller/Cargo.toml
+++ b/crates/cice-controller/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libvnc = { version = "0.1.3", default-features = false, optional = true }
+libvnc = { version = "0.1.4", optional = true }
 
 [features]
 full = ["libvnc"]
