--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 euclid = { version = "0.22.11" }
 log = "0.4.22"
 prost = { version = "0.13.3" }
+prost-types = "0.13.4"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 
