--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -4,15 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-euclid = { version = "0.22.11" }
+
+image = { version = "0.25.5", default-features = false }
 log = "0.4.22"
-prost = { version = "0.13.3" }
-prost-types = "0.13.4"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 
 [dev-dependencies]
 tokio = { version = "1.41.1", features = ["rt", "macros"] }
-
-[build-dependencies]
-prost-build = "0.13.3"
