--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-
+async-trait = "0.1.85"
+futures = "0.3.31"
 image = { version = "0.25.5", default-features = false }
 log = "0.4.22"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
+snafu = "0.8.5"
 
 [dev-dependencies]
 tokio = { version = "1.41.1", features = ["rt", "macros"] }
