--- a/.github/workflows/controller.yml
+++ b/.github/workflows/controller.yml
@@ -6,7 +6,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  controller-vnc:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -16,8 +16,8 @@ jobs:
       - name: Install Nightly Rust Toolchain
         run: rustup update nightly
       - name: Build
-        run: cargo build -p cice-controller --verbose
+        run: cargo build -p cice-controller-vnc --verbose
       - name: Clippy
-        run: cargo clippy -p cice-controller --verbose
+        run: cargo clippy -p cice-controller-vnc --verbose
       - name: Run tests
-        run: cargo test -p cice-controller  --verbose
+        run: cargo test -p cice-controller-vnc  --verbose
