--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: fmt-check
-        run: cargo fmt
+        run: cargo fmt --check
