--- a/.github/workflows/recognizer.yml
+++ b/.github/workflows/recognizer.yml
@@ -6,7 +6,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  recognizer-opencv:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -26,8 +26,8 @@ jobs:
           echo "OPENCV_LINK_PATHS=C:\tools\opencv\build\x64\vc15\lib" >> $GITHUB_ENV
         shell: bash
       - name: Build
-        run: cargo build -p cice-recognizer --verbose
+        run: cargo build -p cice-recognizer-opencv --verbose
       - name: Clippy
-        run: cargo clippy -p cice-recognizer --verbose
+        run: cargo clippy -p cice-recognizer-opencv --verbose
       - name: Run tests
-        run: cargo test -p cice-recognizer  --verbose
+        run: cargo test -p cice-recognizer-opencv  --verbose
