--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -14,3 +14,4 @@ snafu = "0.8.5"
 
 [dev-dependencies]
 tokio = { version = "1.41.1", features = ["rt", "macros"] }
+image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
