--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-channel = { version = "2.3.1", default-features = false }
 async-trait = "0.1.85"
 futures = "0.3.31"
 image = { version = "0.25.5", default-features = false }
