--- a/.github/workflows/controller.yml
+++ b/.github/workflows/controller.yml
@@ -6,18 +6,18 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  controller-vnc:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - name: Install Nightly Rust Toolchain
         run: rustup update nightly
       - name: Build
-        run: cargo build -p cice-controller --verbose
+        run: cargo build -p cice-controller-vnc --verbose
       - name: Clippy
-        run: cargo clippy -p cice-controller --verbose
+        run: cargo clippy -p cice-controller-vnc --verbose
       - name: Run tests
-        run: cargo test -p cice-controller  --verbose
+        run: cargo test -p cice-controller-vnc  --verbose
