--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,15 @@ members = [
     "crates/cice-recognizers/*",
 ]
 resolver = "2"
+
+[workspace.dependencies]
+async-trait = "0.1.88"
+serde = "1.0.214"
+serde_json = "1.0.132"
+log = "0.4.22"
+snafu = "0.8.5"
+futures = "0.3.31"
+image = { version = "0.25.5", default-features = false }
+
+# Dev dependencies
+tokio = { version = "1.41.1", features = ["rt", "macros"] }
