--- a/crates/cice-action/Cargo.toml
+++ b/crates/cice-action/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cice-core = { path = "../cice-core" }
+cice-core = { version = "0.1.0", path = "../cice-core" }
 euclid = { version = "0.22.11", features = ["serde"] }
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
