--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -5,14 +5,14 @@ edition = "2021"
 
 [dependencies]
 async-channel = { version = "2.3.1", default-features = false }
-async-trait = "0.1.85"
-futures = "0.3.31"
-image = { version = "0.25.5", default-features = false }
-log = "0.4.22"
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
-snafu = "0.8.5"
+async-trait = { workspace = true }
+futures = { workspace = true }
+image = { workspace = true }
+log = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+snafu = { workspace = true }
 
 [dev-dependencies]
-tokio = { version = "1.41.1", features = ["rt", "macros"] }
-image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
+tokio = { workspace = true }
+image = { workspace = true, features = ["jpeg"] }
