--- a/.github/workflows/controller.yml
+++ b/.github/workflows/controller.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Nightly Rust Toolchain
         run: rustup update nightly
+      - uses: Swatinem/rust-cache@v2
       - name: Build
         run: cargo build -p cice-controller-vnc --verbose
       - name: Clippy
