--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,6 +22,7 @@ jobs:
           submodules: recursive
       - name: Install Rust nightly
         run: rustup update nightly
+      - uses: Swatinem/rust-cache@v2
       - name: Install Opencv Dependencies #TODO extract install dependency into a seperate reusable workflow
         run: script/dependency/opencv/install.sh
         shell: bash
