--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -11,5 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install Nightly Rust Toolchain
+        run: rustup update nightly
+      - uses: Swatinem/rust-cache@v2
       - name: fmt-check
         run: cargo fmt --check
