--- a/.github/workflows/recognizer.yml
+++ b/.github/workflows/recognizer.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Nightly Rust Toolchain
         run: rustup update nightly
+      - uses: Swatinem/rust-cache@v2
       - name: Install Opencv Dependencies
         run: script/dependency/opencv/install.sh
         shell: bash
