ci: only run workflow on specific path (#20)
* ci: only run workflow on specific path

* ci: run on workflow config changes

--- a/.github/workflows/controller.yml
+++ b/.github/workflows/controller.yml
@@ -1,6 +1,16 @@
 name: cice-controller
 
-on: ["push", "pull_request"]
+on:
+  push:
+    path:
+      - '.github/workflows/controller.yml'
+      - 'crates/cice-controllers/**'
+      - 'crates/cice-core/**'
+  pull_request:
+    path:
+      - '.github/workflows/controller.yml'
+      - 'crates/cice-controllers/**'
+      - 'crates/cice-core/**'
 
 env:
   CARGO_TERM_COLOR: always
