--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -1,6 +1,14 @@
 name: cice-core
 
-on: ["push", "pull_request"]
+on:
+  push:
+    path:
+      - '.github/workflows/core.yml'
+      - 'crates/cice-core/**'
+  pull_request:
+    path:
+      - '.github/workflows/core.yml'
+      - 'crates/cice-core/**'
 
 env:
   CARGO_TERM_COLOR: always
