--- a/crates/cice-recognizers/cice-recognizer-opencv/Cargo.toml
+++ b/crates/cice-recognizers/cice-recognizer-opencv/Cargo.toml
@@ -15,3 +15,4 @@ serde_json = { workspace = true }
 
 [dev-dependencies]
 itertools = '0.11.0'
+image = { workspace = true, features = ["jpeg", "png"] }
