--- a/.github/workflows/recognizer.yml
+++ b/.github/workflows/recognizer.yml
@@ -3,14 +3,14 @@ name: cice-recognizer
 on:
   push:
     path:
-      - '.github/workflows/recognizer.yml'
-      - 'crates/cice-recognizers/**'
-      - 'crates/cice-core/**'
+      - ".github/workflows/recognizer.yml"
+      - "crates/cice-recognizers/**"
+      - "crates/cice-core/**"
   pull_request:
     path:
-      - '.github/workflows/recognizer.yml'
-      - 'crates/cice-recognizers/**'
-      - 'crates/cice-core/**'
+      - ".github/workflows/recognizer.yml"
+      - "crates/cice-recognizers/**"
+      - "crates/cice-core/**"
 
 env:
   CARGO_TERM_COLOR: always
@@ -22,10 +22,16 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         opencv-version:
           - 4.11.0
+      include:
+        os:
+          - macos-latest
+        version:
+          brew: "@4"
     runs-on: ${{ matrix.os }}
     env:
       #Atlas_ROOT_DIR: /usr/include/ # for cmake to find lapacke.h
       OPENCV_VERSION: ${{ matrix.opencv-version }}
+      BREW_OPENCV_VERSION: ${{ matrix.version.brew }}
       #OPENCV_LINKAGE: ${{ matrix.linkage }}
       # SCCACHE_GHA_ENABLED: "true"
       # RUSTC_WRAPPER: "sccache"
@@ -40,4 +46,3 @@ jobs:
       - name: Test
         run: script/ci/opencv/script.sh
         shell: bash
-
