fix(test): resource path

--- a/crates/cice-recognizers/cice-recognizer-opencv/Cargo.toml
+++ b/crates/cice-recognizers/cice-recognizer-opencv/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = { workspace = true }
 [dev-dependencies]
 itertools = '0.11.0'
 image = { workspace = true, features = ["jpeg", "png"] }
+cice-tests-common = { path = "../../cice-tests-common" }
