refactor: move all `test or dev only` crates to `dev` folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "crates/cice-recognizers/*",
 
     #Test or dev only crates
-    "crates/cice-tests-common",
+    "crates/dev/*",
 ]
 resolver = "2"
 
