--- a/crates/dev/cice-tests-common/Cargo.toml
+++ b/crates/dev/cice-tests-common/Cargo.toml
@@ -12,7 +12,7 @@ log = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 snafu = { workspace = true }
-cice-core = { path = "../cice-core" }
+cice-core = { path = "../../cice-core" }
 [dev-dependencies]
 tokio = { workspace = true }
 image = { workspace = true, features = ["jpeg"] }
