--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -7,7 +7,7 @@ comment:                  # this is a top-level key
   hide_project_coverage: false # [true :: only show coverage on the git diff]
 
 ignore:
-  - "crates/cice-tests-common/**"
+  - "crates/dev/**"
 
 component_management:
   default_rules:  # default rules that will be inherited by all components
