--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -6,6 +6,9 @@ comment:                  # this is a top-level key
   require_head: true       # [true :: must have a head report to post]
   hide_project_coverage: false # [true :: only show coverage on the git diff]
 
+ignore:
+  - "crates/dev/**"
+
 component_management:
   default_rules:  # default rules that will be inherited by all components
     statuses:
