--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ members = [
     "crates/cice-lang",
     "crates/cice-controllers/*",
     "crates/cice-recognizers/*",
+
+    #Test or dev only crates
+    "crates/dev/*",
 ]
 resolver = "2"
 
