--- a/.github/workflows/recognizer.yml
+++ b/.github/workflows/recognizer.yml
@@ -22,11 +22,10 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         opencv-version:
           - 4.11.0
-      include:
-        os:
-          - macos-latest
-        version:
-          brew: "@4"
+        include:
+          - os: macos-latest
+            version:
+              brew: "@4"
     runs-on: ${{ matrix.os }}
     env:
       #Atlas_ROOT_DIR: /usr/include/ # for cmake to find lapacke.h
