--- a/.github/workflows/controller.yml
+++ b/.github/workflows/controller.yml
@@ -6,11 +6,13 @@ on:
       - '.github/workflows/controller.yml'
       - 'crates/cice-controllers/**'
       - 'crates/cice-core/**'
+      - "Cargo.toml"
   pull_request:
     path:
       - '.github/workflows/controller.yml'
       - 'crates/cice-controllers/**'
       - 'crates/cice-core/**'
+      - "Cargo.toml"
 
 env:
   CARGO_TERM_COLOR: always
