--- a/.github/workflows/recognizer.yml
+++ b/.github/workflows/recognizer.yml
@@ -6,11 +6,13 @@ on:
       - ".github/workflows/recognizer.yml"
       - "crates/cice-recognizers/**"
       - "crates/cice-core/**"
+      - "Cargo.toml"
   pull_request:
     path:
       - ".github/workflows/recognizer.yml"
       - "crates/cice-recognizers/**"
       - "crates/cice-core/**"
+      - "Cargo.toml"
 
 env:
   CARGO_TERM_COLOR: always
