--- a/crates/cice-core/Cargo.toml
+++ b/crates/cice-core/Cargo.toml
@@ -15,3 +15,4 @@ snafu = { workspace = true }
 tokio = { workspace = true }
 image = { workspace = true, features = ["jpeg"] }
 cice-tests-common = { path = "../dev/cice-tests-common" }
+serde_json = { workspace = true }
