--- a/crates/cice-actions/cice-action-opencv/Cargo.toml
+++ b/crates/cice-actions/cice-action-opencv/Cargo.toml
@@ -1,19 +1,15 @@
 [package]
-name = "cice-recognizer-opencv"
+name = "cice-action-opencv"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 cice-core = { version = "0.1.0", path = "../../cice-core" }
-cice-action = { version = "0.1.0", path = "../../cice-action" }
 opencv = { version = "0.94.2", features = ["clang-runtime"] }
 image = { workspace = true }
 async-trait = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-[features]
 
 [dev-dependencies]
-itertools = '0.11.0'
-image = { workspace = true, features = ["jpeg", "png"] }
-cice-tests-common = { path = "../../dev/cice-tests-common" }
+tokio = { version = "1", features = ["full"] }
