--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,16 +1,16 @@
-name: cice-recognizer
+name: cice-action
 
 on:
   push:
     path:
-      - ".github/workflows/recognizer.yml"
-      - "crates/cice-recognizers/**"
+      - ".github/workflows/action.yml"
+      - "crates/cice-actions/**"
       - "crates/cice-core/**"
       - "Cargo.toml"
   pull_request:
     path:
-      - ".github/workflows/recognizer.yml"
-      - "crates/cice-recognizers/**"
+      - ".github/workflows/action.yml"
+      - "crates/cice-actions/**"
       - "crates/cice-core/**"
       - "Cargo.toml"
 
@@ -18,7 +18,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  recognizer-opencv:
+  action-opencv:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
