--- a/.github/workflows/runtime.yml
+++ b/.github/workflows/runtime.yml
@@ -1,24 +1,24 @@
-name: cice-controller
+name: cice-runtime
 
 on:
   push:
     path:
-      - '.github/workflows/controller.yml'
-      - 'crates/cice-controllers/**'
-      - 'crates/cice-core/**'
+      - ".github/workflows/runtime.yml"
+      - "crates/cice-runtimes/**"
+      - "crates/cice-core/**"
       - "Cargo.toml"
   pull_request:
     path:
-      - '.github/workflows/controller.yml'
-      - 'crates/cice-controllers/**'
-      - 'crates/cice-core/**'
+      - ".github/workflows/runtime.yml"
+      - "crates/cice-runtimes/**"
+      - "crates/cice-core/**"
       - "Cargo.toml"
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  controller-vnc:
+  runtime-vnc:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -29,8 +29,8 @@ jobs:
         run: rustup update nightly
       - uses: Swatinem/rust-cache@v2
       - name: Build
-        run: cargo build -p cice-controller-vnc --verbose
+        run: cargo build -p cice-runtime-vnc --verbose
       - name: Clippy
-        run: cargo clippy -p cice-controller-vnc --verbose
+        run: cargo clippy -p cice-runtime-vnc --verbose
       - name: Run tests
-        run: cargo test -p cice-controller-vnc  --verbose
+        run: cargo test -p cice-runtime-vnc  --verbose
